<resources>
    <string name="app_name">HEX卡查</string>
    <string name="card_query">单卡查询</string>
    <string name="card_name">卡牌名称</string>
    <string name="card_name_ex">卡牌名称(某种程度上支持英文)</string>
    <string name="card_rule">规则文本</string>
    <string name="color">颜色</string>
    <string name="non_color">无</string>
    <string name="white_color">白钻</string>
    <string name="blue_color">蓝玉</string>
    <string name="black_color">鲜血</string>
    <string name="red_color">赤岩</string>
    <string name="green_color">野性</string>
    <string name="rarity">稀有度</string>
    <string name="common">普通</string>
    <string name="uncommon">稀有</string>
    <string name="rare">史诗</string>
    <string name="mythic_rare">传说</string>
    <string name="another_art">异画</string>
    <string name="cost">法术力费用</string>
    <string name="cost_0">0</string>
    <string name="cost_1">1</string>
    <string name="cost_2">2</string>
    <string name="cost_3">3</string>
    <string name="cost_4">4</string>
    <string name="cost_5">5</string>
    <string name="cost_6">6</string>
    <string name="cost_7_and_more">7+</string>
    <string name="type">类别</string>
    <string name="resource">资源</string>
    <string name="troop">部队</string>
    <string name="artifact">造物</string>
    <string name="constant">恒久物</string>
    <string name="action">战术</string>
    <string name="quick">快速</string>
    <string name="sub_type">可在此输入副类别</string>
    <string name="cost_format">费用：%1s</string>
    <string name="token">衍生物</string>
    <string name="alpha">第一版</string>
    <string name="beta">第二版</string>
    <string name="version">%1$s(%2$d&#160;/&#160;%3$d)</string>
    <string name="count">共查找到%1d张相关卡片</string>
    <string name="unique">唯一</string>
    <string name="pow_def">力量%1$d&#160;/&#160;防御%2$d</string>
    <string name="set1">第一版</string>
    <string name="set2">第二版</string>
    <string name="set3">第三版</string>
    <string name="card_list">结果列表</string>
    <string name="card_info">卡牌详情</string>
    <string name="version_name">版本</string>
    <string name="en_input_hint">支持使用英文牌名</string>
</resources>
