<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.CardQueryActivity">

    <include
        android:id="@+id/title"
        layout="@layout/title_base" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/card_name" />

            <EditText
                android:id="@+id/et_card_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/card_rule" />

            <EditText
                android:id="@+id/et_card_rule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/cb_resource"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resource" />

                <CheckBox
                    android:id="@+id/cb_troop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/troop" />

                <CheckBox
                    android:id="@+id/cb_artifact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/artifact" />

                <CheckBox
                    android:id="@+id/cb_constant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/constant" />

                <CheckBox
                    android:id="@+id/cb_action"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action" />

                <CheckBox
                    android:id="@+id/cb_quick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quick" />
            </LinearLayout>

            <EditText
                android:id="@+id/et_subtype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sub_type"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cb_white_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/white_color" />

                <CheckBox
                    android:id="@+id/cb_blue_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blue_color" />

                <CheckBox
                    android:id="@+id/cb_black_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/black_color" />

                <CheckBox
                    android:id="@+id/cb_red_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/red_color" />

                <CheckBox
                    android:id="@+id/cb_green_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/green_color" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/cb_non_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/non_color" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rarity" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cb_common"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/common" />

                <CheckBox
                    android:id="@+id/cb_uncommon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/uncommon" />

                <CheckBox
                    android:id="@+id/cb_rare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rare" />

                <CheckBox
                    android:id="@+id/cb_mythic_rare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mythic_rare" />

                <CheckBox
                    android:id="@+id/cb_another_art"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/another_art" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/cb_token"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/token" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cost" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/cb_cost_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cost_0" />

                <CheckBox
                    android:id="@+id/cb_cost_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cost_1" />

                <CheckBox
                    android:id="@+id/cb_cost_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cost_2" />

                <CheckBox
                    android:id="@+id/cb_cost_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cost_3" />

                <CheckBox
                    android:id="@+id/cb_cost_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cost_4" />

                <CheckBox
                    android:id="@+id/cb_cost_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cost_5" />

                <CheckBox
                    android:id="@+id/cb_cost_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cost_6" />

                <CheckBox
                    android:id="@+id/cb_cost_7_and_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cost_7_and_more" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
